--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ owner:
   name:           Cole Townsend
   avatar:         avatar.png
   bio:            "Aesthete & Athlete"
-  email:          geniuslizhao@gmail.com
+  email:          cole@coletownsend.com
   twitter:        twnsndco
   github:         coletownsend
   instagram:      ctrunsthis
@@ -27,9 +27,11 @@ links:
   - title: About
     url: /about
   - title: Github
-    url: https://github.com/289048093
+    url: https://github.com/ColeTownsend/Balzac-for-Jekyll
     external: true
-
+  - title: Cole Who?
+    url: http://coletownsend.com
+    external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    America/New_York
@@ -54,7 +56,7 @@ kramdown:
 sass:
     style: :compressed
 
-#  https://github.com/289048093
+# https://github.com/mojombo/jekyll/wiki/Permalinks
 permalink:   /:categories/:title
 
 include: [".htaccess"]
